fix: added pg coonection string

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "next": "14.2.16",
     "next-themes": "latest",
     "pg": "^8.16.3",
+    "pg-connection-string": "^2.9.1",
     "react": "^18",
     "react-day-picker": "9.8.0",
     "react-dom": "^18",
