--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "next-themes": "latest",
     "pg": "^8.16.3",
     "pg-connection-string": "^2.9.1",
+    "pgpass": "^1.0.5",
     "react": "^18",
     "react-day-picker": "9.8.0",
     "react-dom": "^18",
