--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "pg": "^8.16.3",
     "pg-connection-string": "^2.9.1",
     "pg-pool": "^3.10.1",
+    "pg-types": "^4.1.0",
     "pgpass": "^1.0.5",
     "react": "^18",
     "react-day-picker": "9.8.0",
