--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "next-themes": "latest",
     "pg": "^8.16.3",
     "pg-connection-string": "^2.9.1",
+    "pg-int8": "^1.0.1",
     "pg-pool": "^3.10.1",
+    "pg-protocol": "^1.10.3",
     "pg-types": "^4.1.0",
     "pgpass": "^1.0.5",
     "react": "^18",
