--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "pgpass": "^1.0.5",
     "postgres-array": "^3.0.4",
     "postgres-bytea": "^3.0.0",
+    "postgres-date": "^2.1.0",
     "react": "^18",
     "react-day-picker": "9.8.0",
     "react-dom": "^18",
