--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "postgres-array": "^3.0.4",
     "postgres-bytea": "^3.0.0",
     "postgres-date": "^2.1.0",
+    "postgres-interval": "^4.0.2",
+    "postgres-range": "^1.1.4",
     "react": "^18",
     "react-day-picker": "9.8.0",
     "react-dom": "^18",
