--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,9 @@
   command = "pnpm run build"
   publish = ".next"
   functions = "netlify/functions"
+  [[plugins]]
+  package = "@netlify/plugin-lighthouse"
+
+  # optional, deploy the lighthouse report to a path under your site
+  [plugins.inputs.audits]
+    output_path = "reports/lighthouse.html"
