--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "zod": "3.25.67"
   },
   "devDependencies": {
+    "@netlify/plugin-lighthouse": "^6.0.3",
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
     "@types/react": "^18",
